# ESP-IDF

./: sdkconfig  sdkconfig.old
components/adcCalibration/: CMakeLists.txt  adcCalibration.c
components/adcCalibration/include/: adcCalibration.h
components/calculadora/: calculadora.c
components/http_client/: CMakeLists.txt  http_client.c
components/led/: led.c
components/mqtt_app/: CMakeLists.txt  Kconfig.projbuild  mqtt_app.c  mqtt_app.h
components/relay/: relay.c
components/relay/include/: relay.h
components/timer_handler/: CMakeLists.txt  timer_handler.c  timer_handler.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c  http_client.c  http_client.h  main.c  wifi.c
